--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY"></script>
+    <script src="js/maps.js"></script>
     <title>Concesionario</title>
 </head>
 <body>
@@ -88,6 +90,59 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+      </section>
+      
+      <section id="offices-locations">
+        <div class="container mt-5">
+          <div class="row">
+              <!-- Sección izquierda con el dropdown -->
+              <div class="col-md-4">
+                  <h3>Ubicaciones de Oficinas</h3>
+                  <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" onclick="updateMap('mainOffice')">
+                          Sede principal
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, temporibus veritatis qui error sunt pariatur distinctio quo modi voluptate eius laudantium, exercitationem, recusandae debitis minima! Porro commodi tenetur laborum nostrum recusandae. Cumque rerum nihil vitae!
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" onclick="updateMap('reindustriasOffice')">
+                          Reindustrias
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque necessitatibus doloribus velit dignissimos, odio perferendis sunt labore molestiae mollitia magnam. Quaerat maiores aspernatur mollitia ipsa consectetur suscipit expedita, omnis quos excepturi harum rem explicabo tempore.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" onclick="updateMap('sidaOffice')">
+                          Sida
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non odio delectus magnam nihil facere nesciunt quibusdam, nobis id autem aspernatur suscipit aliquam debitis perspiciatis assumenda accusantium magni dolor totam optio eum? Facilis vel qui eum.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <!-- Sección derecha con el mapa -->
+              <div class="col-md-8">
+                <iframe id ="officeMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63752.72997867034!2d-75.33504102543262!3d2.945949541545877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3b743deab507fd%3A0x5c08e6e92a1001a8!2sDistoyota%20Neiva!5e0!3m2!1ses-419!2sco!4v1725979737090!5m2!1ses-419!2sco" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+          </div>
+      </div>
       </section>
 </body>
 </html>
