--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
             <div class="carousel-item active">
               <img src="img/corolla.png" class="d-block w-100 carousel-img" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
+                <h5>Corolla</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/fortuner-blanca.png" class="d-block w-100 carousel-img" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
+                <h5>Fortuner</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/rav4.png" class="d-block w-100 carousel-img" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
+                <h5>RAV 4</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/yaris-cross.png" class="d-block w-100 carousel-img" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
+                <h5>Yaris Cross</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/yaris-sport.png" class="d-block w-100 carousel-img" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
+                <h5>Yaris Sport</h5>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
